# Personal

41068RS12025-Group18/: .gitignore  QUICK_START.md  SYSTEM_OVERVIEW.md  TreePlantation1_Save.pgm  TreePlantation1_Save.yaml  TreePlatation2_Save.pgm
41068RS12025-Group18/41068_ignition_bringup/models/pine_tree/: model.sdf
41068RS12025-Group18/41068_ignition_bringup/urdf_drone/: parrot.urdf.xacro
41068RS12025-Group18/41068_ignition_bringup/worlds/: Plantation2.sdf  PlantationTest.sdf
41068RS12025-Group18/drone_controller/: CMakeLists.txt
41068RS12025-Group18/drone_controller/src/: altitude_controller.cpp  drone_controller.cpp  mission_node.cpp
41068RS12025-Group18/drone_ui/: UI_INTEGRATION_README.md  package.xml  setup.py
41068RS12025-Group18/drone_ui/drone_ui/: drone_ui_code.py  drone_ui_node.py
41068RS12025-Group18/lidar_tree_detector/: ReadME.txt  package.xml  requirements.txt
41068RS12025-Group18/lidar_tree_detector/msg/: TreeDetection.msg
41068RS12025-Group18/lidar_tree_detector/src/: lidar_tree_detector_node.cpp
RS1-Group20/config/: nav2_params.yaml
RS1-Group20/launch/: 41068_ignition_drone.launch.py  41068_navigation.launch.py
RS1-Group20/urdf_drone/: parrot.gazebo.xacro  parrot.urdf.xacro
RS1-Group20/worlds/: large_demo.sdf  large_demo_thermal.sdf
src/41068RS12025-Group18/: Drone_UI.ui  TreePlatation2_Save.yaml
src/41068RS12025-Group18/41068_ignition_bringup/config/: nav2_params.yaml  slam_params.yaml
src/41068RS12025-Group18/41068_ignition_bringup/launch/: 41068_ignition_drone.launch.py
src/41068RS12025-Group18/drone_controller/: package.xml
src/41068RS12025-Group18/drone_ui/drone_ui/: drone_ui_node.py
src/41068RS12025-Group18/lidar_tree_detector/: CMakeLists.txt
src/41068RS12025-Group18/lidar_tree_detector/msg/: TreeDetectionArray.msg
src/41068RS12025-Group18/lidar_tree_detector/src/: lidar_tree_detector_node.cpp
